tests/baselines/reference/computedPropertyNames28_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames28_ES5.ts(7,13): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames28_ES5.ts (1 errors) ====
    class Base {
    }
    class C extends Base {
        constructor() {
            super();
            var obj = {
                [(super(), "prop")]() { }
                ~~~~~~~~~~~~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
            };
        }
    }